# lib/db/src/schema/persons.ts
@@ -5,6 +5,15 @@ import { z } from "zod/v4";
 export const personsTable = pgTable("persons", {
   id: serial("id").primaryKey(),
   fullName: text("full_name").notNull(),
+  lastName: text("last_name"),
+  middleName: text("middle_name"),
+  firstName: text("first_name"),
+  region: text("region"),
+  province: text("province"),
+  cityMunicipality: text("city_municipality"),
+  barangay: text("barangay"),
+  dialect: text("dialect"),
+  tribe: text("tribe"),
   alias: text("alias"),
   dateOfBirth: text("date_of_birth"),
   sex: text("sex"),
